# traffic-solution

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  rajkot_ai_traffic_platform_sumo_integrated_prompt.md
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/anomalies/: page.tsx
apps/web/src/app/command-center/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/network-builder/: page.tsx
apps/web/src/app/reports/: page.tsx
apps/web/src/lib/: api.ts  auth.ts  hooks.ts  query-provider.tsx
apps/web/src/types/: index.ts
infra/nginx/: nginx.conf
scripts/: import_sumo_edges.py  seed_admin_user.py  seed_aoi.py  seed_probe_points.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/app/: main.py
services/api/app/core/: config.py  logging.py  security.py
services/api/app/db/: models.py  session.py
services/api/app/db/migrations/: env.py  script.py.mako
services/api/app/db/migrations/versions/: 8b31956937a6_initial_schema_core_tables_sumo_tables.py
services/api/app/jobs/: daily_report.py  poll_tomtom.py
services/api/app/routers/: ai.py  alerts.py  anomalies.py  aoi.py  auth.py  health.py  incidents.py  probe_points.py  reports.py  sumo.py  traffic.py
services/api/app/schemas/: ai.py  reports.py  sumo.py  traffic.py
services/api/app/services/: alert_service.py  anomaly_service.py  comparison_service.py  gemini_predictive_alert.py  gemini_service.py  ingestion_service.py  report_service.py  scenario_context_service.py  sumo_client.py  sumo_import_service.py  tomtom_client.py  weather_client.py
services/api/tests/: test_anomaly_service.py  test_scenario_context_service.py  test_sumo_import_service.py  test_tomtom_client.py
services/simulation/: Dockerfile  pyproject.toml
services/simulation/app/: config.py  main.py  metrics_parser.py  network_builder.py  queue_worker.py  scenario_runner.py  scenario_templates.py  traci_runner.py
services/simulation/scenarios/rajkot_pilot/: README.md
services/simulation/scenarios/rajkot_pilot/demand/: baseline.rou.xml
services/simulation/tests/: test_metrics_parser.py  test_network_builder.py
(+13 files in other folders)
