[project]
name = "rajkot-traffic-api"
version = "0.1.0"
description = "Rajkot AI Traffic Command Center - FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "apscheduler>=3.10",
    "google-genai>=0.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "shapely>=2.0",
    "pyproj>=3.6",
]
# Note: sumolib/traci are NOT installed via pip here. They ship inside the
# SUMO distribution itself (SUMO_HOME/tools). app/core/config.py and the
# scripts that need them append SUMO_HOME/tools to sys.path at runtime.
# Set SUMO_HOME to your SUMO install (see .env / README).

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
